--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,14 +26,15 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.2.0'
 
-    compile 'com.jakewharton:butterknife:7.0.1'
-    compile 'com.squareup:otto:1.3.8'
 
     apt 'com.google.dagger:dagger-compiler:2.0.2'
-    compile 'com.google.dagger:dagger:2.0.2'
     provided 'org.glassfish:javax.annotation:10.0-b28'
 
+    compile 'com.android.support:appcompat-v7:23.2.0'
+    compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.squareup:otto:1.3.8'
+    compile 'com.google.dagger:dagger:2.0.2'
     compile 'com.mcxiaoke.volley:library:1.0.19'
+    compile 'com.android.support:support-v4:23.2.0'
 }
